src/objects/zaapit__zaapit_editable_tb__c.object
<CustomObject>
    <description>ZaapIT&apos;s table-views</description>
    <fields>
        <fullName>zaapit__Columns_Filters2__c</fullName>
        <label>Columns Filters2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__Columns_Filters3__c</fullName>
        <label>Columns Filters3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__Columns_Filters__c</fullName>
        <label>Columns Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__DupeSettings__c</fullName>
        <label>DupeSettings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_Sort_Grouping2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sort Grouping2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_Sort_coloring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable sort coloring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_Sort_grouping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable sort grouping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Extra_Condition_Filter__c</fullName>
        <label>Extra Condition Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__Show_as_default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show as default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__View_Name__c</fullName>
        <label>View Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__columnsWidth__c</fullName>
        <label>columnsWidth</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__currPage__c</fullName>
        <description>Current Page</description>
        <label>Current Page</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__customLinksOnReadMode__c</fullName>
        <label>customLinksOnReadMode</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__fieldsHeaders__c</fullName>
        <label>fieldsHeaders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__fields__c</fullName>
        <label>fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__maxRowsPerPage__c</fullName>
        <description>Max Rows Per Page</description>
        <label>maxRowsPerPage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__searchSTR__c</fullName>
        <label>searchSTR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortBy2__c</fullName>
        <label>sortBy2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortBy3__c</fullName>
        <label>sortBy3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortBy__c</fullName>
        <label>sortBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortDir2__c</fullName>
        <label>sortDir2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortDir3__c</fullName>
        <label>sortDir3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortDir__c</fullName>
        <label>sortDir</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__table__c</fullName>
        <description>The view&apos;s table for object</description>
        <label>Table For Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__topChartsFields__c</fullName>
        <description>Auto open the charts for the fields inside this fields.
Example: field1#field2....</description>
        <label>topChartsFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ZaapIT Table</label>
    <listViews>
        <fullName>zaapit__All</fullName>
        <columns>zaapit__View_Name__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>zaapit__Show_as_default__c</columns>
        <columns>zaapit__sortBy__c</columns>
        <columns>zaapit__sortBy2__c</columns>
        <columns>zaapit__sortBy3__c</columns>
        <columns>zaapit__sortDir__c</columns>
        <columns>zaapit__sortDir2__c</columns>
        <columns>zaapit__sortDir3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ZaapIT Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZaapIT Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>